# osso-games-startup

./: Makefile.am  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  appdata.h  dbus.c  dbus.h  main.c  main.h  settings.c  settings.h  startup_app.h  startup_communication.c  startup_communication.h  startup_config.h  startup_gamemanager.c  startup_gamemanager.h  startup_state.h  state_save.c  state_save.h
src/ui/: callbacks.c  callbacks.h  interface.c  interface.h  startup_i18n.h  startup_plugin.h
